Add track caching via yt-dlp
